welcome.lessons.welcome.array.array123.Array123.scala.error
array123:4: error: type mismatch;
 found   : Unit
 required: Boolean
	for (x<-0 to nums.length-1) {
              ^